[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/ui/back_menu.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/front_menu.png" type="Texture" id=2]
[ext_resource path="res://world/user_interface/menu.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/environment/Desmoronamento_1.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/fonts/Retro Gaming.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://entities/characters/smoker/smoker.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/characters/skateboarder/skateboarder.tscn" type="PackedScene" id=7]
[ext_resource path="res://entities/characters/mother/mother.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/characters/child/child.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/characters/journalist/journalist.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/characters/seller/seller.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/sounds/ui/Click - entrada.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/ui/Click - voltar.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/ui/background_ui.png" type="Texture" id=14]
[ext_resource path="res://assets/sounds/environment/Musica menu.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=8]
resource_name = "Credits"
tracks/0/type = "value"
tracks/0/path = NodePath("../Effects/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Credits_left"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 162, 108 ), Vector2( 487, 108 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Credits_right"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 161, 108 ), Vector2( -164, 108 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Quit_left"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -164, 108 ), Vector2( 162, 108 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 487, 108 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Start"
length = 23.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Effects/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.7, 23 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Effects/SoundFX/CollapseFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Start_right"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 487, 108 ), Vector2( 162, 108 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = ExtResource( 5 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="Node2D" parent="."]
position = Vector2( 400, 96 )
scale = Vector2( 1.5, 1.5 )

[node name="backgroud_ui" type="Sprite" parent="Background"]
position = Vector2( -108, -8 )
texture = ExtResource( 14 )
offset = Vector2( -49, 29 )

[node name="Select" type="Node2D" parent="."]
position = Vector2( 487, 108 )
scale = Vector2( 2, 2 )

[node name="back_train" type="Sprite" parent="Select"]
texture = ExtResource( 1 )

[node name="Characters" type="Node2D" parent="Select"]
position = Vector2( -5.5, 0.5 )

[node name="Smoker" parent="Select/Characters" instance=ExtResource( 6 )]
position = Vector2( 194.5, 13 )

[node name="Skateboarder" parent="Select/Characters" instance=ExtResource( 7 )]
position = Vector2( -94.5, 7 )

[node name="Animated" parent="Select/Characters/Skateboarder" index="2"]
animation = "idle"
frame = 3

[node name="Mother" parent="Select/Characters" instance=ExtResource( 8 )]
position = Vector2( -218, 5.5 )

[node name="Animated" parent="Select/Characters/Mother" index="2"]
position = Vector2( 3, 6 )
animation = "idle"

[node name="Child" parent="Select/Characters" instance=ExtResource( 9 )]
position = Vector2( -229.5, 16.5 )

[node name="Journalist" parent="Select/Characters" instance=ExtResource( 10 )]
position = Vector2( -30, 10.5 )

[node name="Seller" parent="Select/Characters" instance=ExtResource( 11 )]
position = Vector2( 30.5, 8.5 )

[node name="front_train" type="Sprite" parent="Select"]
texture = ExtResource( 2 )

[node name="Animation" type="AnimationPlayer" parent="Select"]
anims/Credits = SubResource( 8 )
anims/Credits_left = SubResource( 5 )
anims/Credits_right = SubResource( 1 )
anims/Quit_left = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Start = SubResource( 6 )
anims/Start_right = SubResource( 4 )

[node name="Start" type="Node2D" parent="Select"]
position = Vector2( -139.5, -7.5 )
scale = Vector2( 0.15, 0.15 )

[node name="Text" type="Label" parent="Select/Start"]
modulate = Color( 0.0980392, 0.0941176, 0.0941176, 0.635294 )
margin_left = -211.0
margin_top = -19.0
margin_right = -111.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 7 )
text = "Juegar"
align = 1
valign = 1
uppercase = true

[node name="Credits" type="Node2D" parent="Select"]
position = Vector2( 21.5, -7.5 )
scale = Vector2( 0.15, 0.15 )

[node name="Text" type="Label" parent="Select/Credits"]
modulate = Color( 0.0980392, 0.0941176, 0.0941176, 0.635294 )
margin_left = -213.333
margin_top = -20.0
margin_right = -96.3333
margin_bottom = 7.99997
custom_fonts/font = SubResource( 7 )
text = "creditos"
align = 1
valign = 1
uppercase = true

[node name="Quit" type="Node2D" parent="Select"]
position = Vector2( 63, -6.5 )
scale = Vector2( 0.15, 0.15 )

[node name="Text" type="Label" parent="Select/Quit"]
modulate = Color( 0.0980392, 0.0941176, 0.0941176, 0.635294 )
margin_left = 606.667
margin_top = -23.3333
margin_right = 723.667
margin_bottom = 4.66666
custom_fonts/font = SubResource( 7 )
text = "salir"
align = 1
valign = 1
uppercase = true

[node name="Effects" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Effects"]
margin_left = -2.0
margin_top = -2.0
margin_right = 323.0
margin_bottom = 181.0
color = Color( 0, 0, 0, 0 )

[node name="SoundFX" type="Node2D" parent="Effects"]

[node name="CollapseFX" type="AudioStreamPlayer" parent="Effects/SoundFX"]
stream = ExtResource( 4 )

[node name="SelectFX" type="AudioStreamPlayer" parent="Effects/SoundFX"]
stream = ExtResource( 12 )

[node name="SkipFX" type="AudioStreamPlayer" parent="Effects/SoundFX"]
stream = ExtResource( 13 )

[node name="SoundMenuFX" type="AudioStreamPlayer" parent="Effects/SoundFX"]
stream = ExtResource( 15 )

[connection signal="animation_finished" from="Select/Animation" to="." method="_on_Animation_animation_finished"]

[editable path="Select/Characters/Skateboarder"]
[editable path="Select/Characters/Mother"]
